# TemperatureControlSystem

./: CMakeLists.txt  README.md  embedded_temp_contrl.cpp
.github/workflows/: ci.yml
